fixed h2 size on mobile

--- a/src/home/main.css
+++ b/src/home/main.css
@@ -90,5 +90,11 @@ body {
   }
 }
 
+@media (max-width: 576px) {
+  .tag {
+    font-size: 45px;
+  }
+}
+
 
 
